--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         .hero-section {
             width: 100%;
             height: 450px; /* Adjust height as needed */
-            background-image: url('https://images.unsplash.com/photo-1578875301878-43f80c857703?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGRhcnRzJTIwdG91cm5hbWVudHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=800&q=60'); /* Dartboard in action image from Unsplash */
+            background-image: url('dart1.jpg'); /* Image from the root folder */
             background-size: cover;
             background-position: center;
             display: flex;
@@ -68,7 +68,6 @@
             z-index: 1; /* Ensure it's above the gradient background */
             overflow: hidden; /* For pseudo-element overlay */
         }
-
         .hero-section::before {
             content: '';
             position: absolute;
