--- a/index.html
+++ b/index.html
@@ -288,15 +288,7 @@
 
         <div class="map-section">
             <h2>Location Map</h2>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.2892978931165!2d37.33777557434571!3d-0.6695276993208764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182821b068c227e7%3A0xb36340f1a9b1c76a!2s+254+Club+Sports+Bar!5e0!3m2!1sen!2ske!4v1716886981452!5m2!1sen!2ske"
-                width="600"
-                height="450"
-                style="border:0;"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-            </iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.5352257791524!2d37.35521261071318!3d-0.6825420352617502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1826210d91bbb661%3A0x77e82399df648853!2s%2B254%20Club%20Sport%20Bar!5e0!3m2!1sen!2ske!4v1748420397502!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <p style="font-size: 0.9em; margin-top: 15px;">(Map showing approximate location of +254 Club Sports Bar. Please verify.)</p>
         </div>
 
